--- a/myRclone.ipynb
+++ b/myRclone.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/TheCaduceus/Multi-Cloud-Transfer-Tool/blob/main/Rclone.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Khanomix/mcode/blob/main/myRclone.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -43,7 +43,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <br><center><img src=\"https://cdn.thecaduceus.eu.org/MCT/img/Google-Drive-Logo.png\" height=\"50\" alt=\"Google-Drive-Logo\"/></center>\n",
+        "#@markdown <br><center><img src=\"https://raw.githubusercontent.com/Khanomix/mcode/main/mtc/Google-Drive-Logo.png\" height=\"50\" alt=\"Google-Drive-Logo\"/></center>\n",
         "#@markdown <center><h3>Connect to Google Account</h3></center><br>\n",
         "\n",
         "from pathlib import Path\n",
@@ -121,7 +121,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <br><center><img src=\"https://cdn.thecaduceus.eu.org/MCT/img/Setup_img.png\" height=\"50\" alt=\"Setup-Logo\"/></center>\n",
+        "#@markdown <br><center><img src=\"https://raw.githubusercontent.com/Khanomix/mcode/main/mtc/Setup_img.png\" height=\"50\" alt=\"Setup-Logo\"/></center>\n",
         "#@markdown <center><h3><b>Setup & Configure Environment</b></h3></center><br>\n",
         "\n",
         "from sys import exit as end\n",
@@ -137,7 +137,7 @@
         "\n",
         "# Check for latest version\n",
         "try:\n",
-        "\tjson_data = get_url(\"https://cdn.thecaduceus.eu.org/MCT/json/mct.json\").json()\n",
+        "\tjson_data = get_url(\"https://raw.githubusercontent.com/Khanomix/mcode/main/mct.json\").json()\n",
         "\tprint(\"Connected with CDN.\")\n",
         "\tif current_version == json_data[\"version\"]:\n",
         "\t\tprint(f'Great Job! you are using latest version: {json_data[\"version\"]}')\n",
@@ -259,7 +259,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown <br><center><img src=\"https://cdn.thecaduceus.eu.org/MCT/img/rclone_logo.png\" height=\"50\" alt=\"Rclone-Logo\"/></center>\n",
+        "#@markdown <br><center><img src=\"https://raw.githubusercontent.com/Khanomix/mcode/main/mtc/rclone_logo.png\" height=\"50\" alt=\"Rclone-Logo\"/></center>\n",
         "#@markdown <center><h3><b>Fetch Previous MCT Config from My Drive</b></h3></center><br>\n",
         "\n",
         "from sys import exit as end\n",
@@ -634,7 +634,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown <br><center><img src=\"https://cdn.thecaduceus.eu.org/MCT/img/rclone_logo.png\" height=\"50\" alt=\"Rclone-Logo\"/></center>\n",
+        "#@markdown <br><center><img src=\"https://raw.githubusercontent.com/Khanomix/mcode/main/mtc/rclone_logo.png\" height=\"50\" alt=\"Rclone-Logo\"/></center>\n",
         "#@markdown <center><h3><b>Create/Edit/Delete Rclone Config File</b></h3></center><br>\n",
         "\n",
         "from google.colab import files\n",
@@ -759,7 +759,7 @@
       "source": [
         "# @markdown <br>\n",
         "# @markdown <center><h3><b>Connect To Cloud Accounts</b></h3></center>\n",
-        "# @markdown <br><center><img src=\"https://cdn.thecaduceus.eu.org/MCT/img/Multiple-Clouds.webp\" height=\"100\" alt=\"Multiple-Clouds\"/></center>\n",
+        "# @markdown <br><center><img src=\"https://raw.githubusercontent.com/Khanomix/mcode/main/mtc/Multiple-Clouds.webp\" height=\"100\" alt=\"Multiple-Clouds\"/></center>\n",
         "# @markdown <center><b>Connect your Cloud Accounts (Rclone remotes) between which you want to transfer Data!</b></center>\n",
         "\n",
         "from sys import exit as end\n",
@@ -845,7 +845,7 @@
       "cell_type": "code",
       "source": [
         "# @markdown <br>\n",
-        "# @markdown <center><img src=\"https://cdn.thecaduceus.eu.org/MCT/img/rclone_logo_text.png\" alt=\"rclone forum\" width=150></center>\n",
+        "# @markdown <center><img src=\"https://raw.githubusercontent.com/Khanomix/mcode/main/mtc/rclone_logo_text.png\" alt=\"rclone forum\" width=150></center>\n",
         "\n",
         "# @markdown ---\n",
         "import smtplib\n",
@@ -1039,7 +1039,7 @@
         "    json_data = json_load(mct_json)\n",
         "else:\n",
         "  print(\"[INFO] - Downloading mct.json [file]\")\n",
-        "  json_data = get_url(\"https://cdn.thecaduceus.eu.org/MCT/json/mct.json\").json()\n",
+        "  json_data = get_url(\"https://raw.githubusercontent.com/Khanomix/mcode/main/mct.json\").json()\n",
         "  with open('mct.json', 'w+') as mct_json:\n",
         "    mct_json.write(dump_json(json_data))\n",
         "\n",
